force-app/main/default/objects/FEC_PDFTemplate__mdt/FEC_PDFTemplate__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type lưu trữ HTML template cho PDF generation. Mỗi record là 1 template với unique code.</description>
    <label>FEC PDF Template</label>
    <pluralLabel>FEC PDF Templates</pluralLabel>
</CustomObject>