force-app/main/default/objects/FEC_PDFTemplate__mdt/fields/FEC_Category__c.field-meta.xml
<CustomField>
    <fullName>FEC_Category__c</fullName>
    <description>Phân loại template. VD: Thanh Lý, Xác Nhận, Hợp Đồng, Báo Cáo</description>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>