force-app/main/default/objects/FEC_PDFTemplate__mdt/fields/FEC_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Description__c</fullName>
    <description>Mô tả mục đích sử dụng của template</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>