force-app/main/default/objects/FEC_PDFTemplate__mdt/fields/FEC_FileName__c.field-meta.xml
<CustomField>
    <fullName>FEC_FileName__c</fullName>
    <description>Tên file PDF mặc định khi generate. VD: XacNhanThanhLy_HDTD. Có thể override khi gọi.</description>
    <label>Default File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>