force-app/main/default/objects/FEC_PDFTemplate__mdt/fields/FEC_HTMLBody__c.field-meta.xml
<CustomField>
    <fullName>FEC_HTMLBody__c</fullName>
    <description>Nội dung HTML template chứa Pega-style placeholder. Dùng LongTextArea để chứa template lớn.</description>
    <label>HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>