force-app/main/default/objects/FEC_PDFTemplate__mdt/fields/FEC_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Template có đang active hay không. Chỉ template active mới được sử dụng.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>