force-app/main/default/objects/FEC_PDFTemplate__mdt/fields/FEC_TemplateCode__c.field-meta.xml
<CustomField>
    <fullName>FEC_TemplateCode__c</fullName>
    <description>Mã unique để identify template. VD: XNTL_HDTD, XNTL_THE, GIAY_XN_DU_NO</description>
    <externalId>true</externalId>
    <label>Template Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>